Multiple fixes
- Change focus properties on;
   - Links
   - Buttons
   - Form elements
- Fix placeholder color for FF
- Fix horizontal scrollbar on selects[multiple]

--- a/scss/pavilion-parts/_typography.scss
+++ b/scss/pavilion-parts/_typography.scss
@@ -14,12 +14,9 @@ a {
     &:visited {
         color: $primary-color;
     }
-    &:focus {
+    &:focus, &:hover {
         color: darken($primary-color, 15%);
         text-decoration: underline;
-    }
-    &:hover {
-        color: darken($primary-color, 15%);
     }
 }
 
